// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <TopThreeThingsDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "topThreeThingsPanel": true,
        }
      }
      isBtnShowPanel={false}
      isOpen={false}
      isShowControlPanel={true}
      name="topThreeThingsPanel"
      title="Edit Top 3 Thing"
    >
      <ReduxForm
        detail={Object {}}
      />
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <TopThreeThingsDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "topThreeThingsPanel": true,
        }
      }
      isBtnShowPanel={false}
      isOpen={false}
      isShowControlPanel={true}
      name="topThreeThingsPanel"
      title="Edit Top 3 Thing"
    >
      <ReduxForm
        detail={
          Object {
            "description1": "My first problem",
            "description2": "My second problem",
            "description3": "1",
            "name1": "Item 2",
            "name2": "Item 2",
            "name3": "Item 2",
            "source": "QEWDDB",
            "sourceId": "26566e17-0ede-4818-8453-728ea0aa142c",
            "undefined": 1517475061744,
          }
        }
      />
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <TopThreeThingsDetail /> should renders with all props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      currentPanel="currentPanel"
      editedPanel="editedPanel"
      formValues={Object {}}
      isBtnShowPanel={false}
      isOpen={false}
      isShowControlPanel={true}
      name="topThreeThingsPanel"
      onCancel={[Function]}
      onEdit={[Function]}
      onExpand={[Function]}
      onSaveSettings={[Function]}
      title="Top 3 Thing"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div>
              <FormSectionList
                title="Isssue #1"
              >
                <FormSection
                  isAccordion={false}
                  isBordered={true}
                  isImportBtn={false}
                  theme="primary"
                >
                  <div
                    className="form-group-wrapper"
                  >
                    <div
                      className="row-expand"
                    >
                      <div
                        className="col-expand-left"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="control-label"
                          >
                            Name
                          </label>
                          <div
                            className="form-control-static"
                          >
                            Item 2
                          </div>
                        </div>
                      </div>
                      <div
                        className="col-expand-right"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="control-label"
                          >
                            Description
                          </label>
                          <div
                            className="form-control-static"
                          >
                            My first problem
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </FormSection>
              </FormSectionList>
              <FormSectionList
                title="Isssue #2"
              >
                <FormSection
                  isAccordion={false}
                  isBordered={true}
                  isImportBtn={false}
                  theme="primary"
                >
                  <div
                    className="form-group-wrapper"
                  >
                    <div
                      className="row-expand"
                    >
                      <div
                        className="col-expand-left"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="control-label"
                          >
                            Name
                          </label>
                          <div
                            className="form-control-static"
                          >
                            Item 2
                          </div>
                        </div>
                      </div>
                      <div
                        className="col-expand-right"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="control-label"
                          >
                            Description
                          </label>
                          <div
                            className="form-control-static"
                          >
                            My second problem
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </FormSection>
              </FormSectionList>
              <FormSectionList
                title="Isssue #3"
              >
                <FormSection
                  isAccordion={false}
                  isBordered={true}
                  isImportBtn={false}
                  theme="primary"
                >
                  <div
                    className="form-group-wrapper"
                  >
                    <div
                      className="row-expand"
                    >
                      <div
                        className="col-expand-left"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="control-label"
                          >
                            Name
                          </label>
                          <div
                            className="form-control-static"
                          >
                            Item 2
                          </div>
                        </div>
                      </div>
                      <div
                        className="col-expand-right"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="control-label"
                          >
                            Description
                          </label>
                          <div
                            className="form-control-static"
                          >
                            1
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </FormSection>
              </FormSectionList>
              <div
                className="row-expand"
              >
                <div
                  className="col-expand-left"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Date
                    </label>
                    <div
                      className="form-control-static"
                    >
                      01-Feb-2018
                    </div>
                  </div>
                </div>
                <div
                  className="col-expand-right"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="control-label"
                    >
                      Source
                    </label>
                    <div
                      className="form-control-static"
                    >
                      QEWDDB
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;
